fixed the allowing people to horizontal scroll the timeline

--- a/src/css-components/Qualifications.module.css
+++ b/src/css-components/Qualifications.module.css
@@ -27,7 +27,7 @@
     height: 60vh;
     /* border:solid red 4px; */
     /* width: 100vw; */
-    overflow-x: auto;
+    overflow-x: hidden;
     white-space: nowrap;
 
     /* Hide scrollbar */
